fixed some overlap with the sphere

--- a/building-blocks.scss
+++ b/building-blocks.scss
@@ -37,7 +37,7 @@ html, body, .sandbox {
 	top: 45%;
 	left: 45%;
 	// animation: spin 3s infinite;
-	transform: rotateX(45deg);
+	// transform: rotateX(45deg);
 }
 .face {
 	// border: 1px solid rgba(0,255,0,1);
